module(name = "uv_lock")

bazel_dep(name = "rules_python")
local_path_override(
    module_name = "rules_python",
    path = "../../..",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.13")

uv = use_extension("@rules_python//python/uv:uv.bzl", "uv")
uv.configure(version = "0.11.2")
use_repo(uv, "uv")

register_toolchains("@uv//:all")
