load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_python_publish_deps//:requirements.bzl", "all_requirements")

build_test(
    name = "all_requirements_build_test",
    targets = all_requirements,
)

bzl_library(
    name = "transitions",
    srcs = ["transitions.bzl"],
    visibility = ["//visibility:public"],
)
